--- a/.babelrc
+++ b/.babelrc
@@ -8,16 +8,5 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"],
-  "env": {
-    "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["transform-vue-jsx", "transform-es2015-modules-commonjs", "dynamic-import-node",
-        ["import", {
-          "libraryName": "iview",
-          "libraryDirectory": "src/components"
-        }]
-      ]
-    }
-  }
+  "plugins": ["transform-vue-jsx", "transform-runtime"]
 }
